<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity"
    android:background="@color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        >

        <ImageView
            android:id="@+id/ivLogo"
            android:src="@drawable/in8"
            android:layout_height="140dp"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tvTitle"
            android:layout_below="@id/ivLogo"
            android:layout_marginTop="-20dp"
            android:text="@string/title_login"
            android:textSize="25dp"
            android:textColor="@color/gray"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            />
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/inputs"
             android:layout_below="@id/tvTitle"
             android:layout_marginTop="30dp"

             >
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/etUserOrEmail"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 android:inputType="text"
                 android:layout_centerHorizontal="true"
                 android:hint="@string/et_username"
                 android:fontFamily="sans-serif-black"
                 android:layout_marginTop="10dp"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
                 />
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/etUserOrEmail"
                 android:id="@+id/etPassword"
                 android:layout_centerHorizontal="true"
                 android:hint="@string/et_password"
                 android:fontFamily="sans-serif-black"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="30dp"
                 android:imeOptions="actionNext"
                 android:maxLines="1"
                 android:inputType="textPassword"
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
                 />


        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="45dp"
            android:layout_below="@+id/etPassword"
            android:background="@drawable/btn_inputs"
            android:text="@string/login"
            android:textColor="@color/white"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            />
         </RelativeLayout>
        <Button
            android:id="@+id/btForgotPassword"
            android:layout_below="@id/inputs"
            android:text="@string/forgot_password"
            android:textColor="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="14dp"
            android:layout_marginTop="30dp"
            android:background="@null"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btForgotPassword"
            android:text="@string/login_with_socialmedia"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:id="@+id/tvSocial"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tvSocial"
            android:layout_marginTop="15dp">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/facebook"
                android:layout_margin="5dp"
                android:id="@+id/ivFacebook"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/twitter"
                android:layout_margin="5dp"
                android:id="@+id/ivTwitter"
                />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/google"
                android:layout_margin="5dp"
                android:id="@+id/ivGoogle"
                />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>