<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ExchangeActivity"
    android:clickable="true"
    android:focusableInTouchMode="true"
    >
    <ImageButton
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/ibGetHistoric"
        android:layout_marginTop="7dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_back"
        android:background="@null"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        />
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/ibBackToLogin"
        android:layout_margin="5dp"
        android:layout_alignParentLeft="true"
        android:src="@drawable/arrow_back"
        android:background="@null"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        />
    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/in8splash"
        android:layout_centerHorizontal="true"
        android:id="@+id/ivLogo"
        android:layout_below="@id/ibGetHistoric"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/title_exchange"
        android:layout_below="@id/ivLogo"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvTitle"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_centerHorizontal="true"
        android:id="@+id/llSelectCoin"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc_convert"
        android:textSize="20dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="10dp"
        android:id="@+id/tvDescription"
        />
    <Spinner
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:id="@+id/spCoins"
        android:textAlignment="center"
        />
    </LinearLayout>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/llSelectCoin"
        android:id="@+id/etValue"
        android:layout_centerHorizontal="true"
        android:hint="@string/value_to_convert"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:maxLength="10"
        />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btConvert"
        android:layout_width="150dp"
        android:layout_centerHorizontal="true"
        android:layout_height="45dp"
        android:layout_below="@+id/etValue"
        android:background="@drawable/btn_inputs"
        android:text="@string/button_convert"
        android:textColor="@color/white"
        android:imeOptions="actionDone"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btConvert"
        android:visibility="invisible"
        android:id="@+id/rlCountryCurrency"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Country Currency"
            android:textSize="25dp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/tvCountryCurrency"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvCountryCurrency"
            android:padding="25dp"
            android:id="@+id/lvCountryCurrency"
            />


    </RelativeLayout>


</RelativeLayout>